--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 
   <body>
     <div id="root"></div>
-    <script src="./index.js"></script>
+    <!-- For development only - fallback test script -->
+    <!-- <script src="./index.js"></script> -->
+    <!-- The actual Vite entry point -->
+    <script type="module" src="./assets/index.js"></script>
   </body>
 </html>
