--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     <!-- For development only - fallback test script -->
     <!-- <script src="./index.js"></script> -->
     <!-- The actual Vite entry point -->
-    <script type="module" src="./assets/index.js"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
