--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
 
   <body>
     <div id="root"></div>
-    <!-- For development only - fallback test script -->
-    <!-- <script src="./index.js"></script> -->
-    <!-- The actual Vite entry point -->
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
